--- a/app/src/main/res/layout/fragment_personality.xml
+++ b/app/src/main/res/layout/fragment_personality.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".options.ui.gallery.GalleryFragment">
+    tools:context=".options.ui.personality.PersonalityFragment">
 
     <TextView
-        android:id="@+id/text_gallery"
+        android:id="@+id/text_personality"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
