--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#9E9E9E</color>
+    <color name="dark_grey">#454545</color>
+    <color name="ligth_grey">#B6B6B6</color>
 </resources>
