--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,20 +6,25 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_home"
             android:title="@string/menu_home" />
         <item
             android:id="@+id/nav_personality"
             android:icon="@drawable/ic_testes"
             android:title="Personalidade" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
+            android:id="@+id/nav_intelligence"
+            android:icon="@drawable/ic_testes"
+            android:title="Inteligência"/>
         <item
             android:id="@+id/nav_depression"
             android:icon="@drawable/ic_testes"
             android:title="Depressão"
+            />
+        <item
+            android:id="@+id/nav_warning"
+            android:icon="@drawable/ic_testes"
+            android:title="Atenção"
             />
     </group>
 </menu>
