--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -18,14 +18,20 @@
         tools:layout="@layout/fragment_personality" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.example.appaplicatestes.options.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:id="@+id/nav_intelligence"
+        android:name="com.example.appaplicatestes.options.ui.intelligence.IntelligenceFragment"
+        android:label="Inteligência"
+        tools:layout="@layout/fragment_intelligence" />
     <fragment
         android:id="@+id/nav_depression"
         android:name="com.example.appaplicatestes.options.ui.depression.DepressionFragment"
         android:label="Depressão"
         tools:layout="@layout/fragment_depression"
+        />
+    <fragment
+        android:id="@+id/nav_warning"
+        android:name="com.example.appaplicatestes.options.ui.warning.WarningFragment"
+        android:label="Atenção"
+        tools:layout="@layout/fragment_warning"
         />
 </navigation>
