--- a/app/src/main/res/layout/activity_g36.xml
+++ b/app/src/main/res/layout/activity_g36.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".options.ui.depression.activys.EpdActivity">
+    tools:context=".options.ui.intelligence.activys.G36Activity">
 
     <TextView
-        android:id="@+id/text_title_epd"
+        android:id="@+id/text_title_g36"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/dark_grey"
-        android:text="EPD"
+        android:text="G36"
         android:textAlignment="center"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -19,71 +19,69 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/text_aplication_epd"
+        android:id="@+id/text_aplication_g36"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="APLICAÇÃO: Individual / Coletivo"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/text_items_epd"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintEnd_toEndOf="@+id/text_items_g36"
+        app:layout_constraintHorizontal_bias="0.463"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.063" />
+        app:layout_constraintVertical_bias="0.054" />
 
     <TextView
         android:id="@+id/text_context_g36"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:text="CONTEXTO: Clínico, Hospitalar e em Pesquisas."
+        android:text="CONTEXTO: Organizacional e clinica"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.574"
+        app:layout_constraintHorizontal_bias="0.483"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.162" />
+        app:layout_constraintVertical_bias="0.141" />
 
     <TextView
-        android:id="@+id/text_time_epd"
+        android:id="@+id/text_time_g36"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TEMPO:  Não há limite de tempo para aplicação, sendo que, em média, 20 minutos são suficientes para responder o instrumento, além de ser aconselhável a aplicação em única sessão."
+        android:text="TEMPO:  Aplicado sem limite de tempo, sendo que as pessoas utilizam um tempo médio de 45 minutos."
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.191" />
+
+    <TextView
+        android:id="@+id/text_correction_g36"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="CORREÇÃO: Manual/ Informatizada"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/text_items_g36"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.095" />
+
+    <TextView
+        android:id="@+id/text_obj_g36"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="OBJETIVO: Avaliar o fator G de inteligência (fator geral de inteligência) medindo a capacidade intelectual do indivíduo em utilizar os recursos presentes na resolução de problemas."
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.223" />
+        app:layout_constraintVertical_bias="0.276" />
 
     <TextView
-        android:id="@+id/text_correction_epd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="130dp"
-        android:text="CORREÇÃO:Manual"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.088"
-        app:layout_constraintStart_toStartOf="@+id/text_items_epd"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.115" />
-
-    <TextView
-        android:id="@+id/text_obj_epd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="OBJETIVO: A Escala de Pensamentos Depressivos- EPD, é um instrumento autoaplicável, que contém 26 itens com 03 opções de respostas cada. Seu objetivo é avaliar distorções de pensamentos comumente encontradas em pessoas com depressão e está baseada no modelo da tríade cognitiva de A.T. Beck. "
-        android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.346" />
-
-    <TextView
-        android:id="@+id/title_description_epd"
+        android:id="@+id/title_description_g36"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="DESCRIÇÃO"
@@ -91,10 +89,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.639" />
+        app:layout_constraintVertical_bias="0.557" />
 
     <TextView
-        android:id="@+id/text_description_epd"
+        android:id="@+id/text_description_g36"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="6dp"
@@ -102,36 +100,37 @@
         android:autoText="false"
         android:elegantTextHeight="true"
         android:freezesText="false"
-        android:text="A EPD visa auxiliar pesquisadores e profissionais de saúde, em especial psicólogos clínicos e de ambulatórios de distúrbios/transtornos afetivos, no desenvolvimento de avaliações padronizadas e que possam também gerar intervenções mais efetivas e focadas no conteúdo dos pensamentos seja no desenvolvimento seja no agravamento de psicopatologias. Assim, visa contemplar a melhora da qualidade de vida não apenas do sujeito que tem pensamentos negativistas, mas também de sua família e daqueles que o acompanham."
+        android:text="este saturado de fator G e de múltipla escolha para as respostas.  As questões são apresentadas em ordem crescente de dificuldade, envolvendo os seguintes raciocínios: a) compreensão de relação de identidade simples, b) compreensão de relação de identidade mais raciocínio por analogia, c) raciocínio por analogia envolvendo mudança de posição, d) raciocínio por analogia de tipo numérico e envolvendo mudança de posição e raciocínio de tipo espacial. "
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.886" />
+        app:layout_constraintVertical_bias="0.749" />
 
     <TextView
-        android:id="@+id/text_items_epd"
+        android:id="@+id/text_items_g36"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ITEMS: 1 Manual e 1 Bloco com 50 folhas (25 de resposta e 25 de registro)."
+        android:text="ITEMS: 01   Manual 01   Caderno de exercícios (reutilizável) 01   Bloco com 25 folhas de respostas 01   Conjunto de crivos de correção 25   Correções informatizadas (navegador homologado para uso: Google Chrome)   "
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.556" />
+        app:layout_constraintVertical_bias="0.453" />
 
     <TextView
-        android:id="@+id/text_app_epd"
+        android:id="@+id/text_app_g36"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="QUEM PODE APLICAR: Restrito ao psicólogo"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/text_items_epd"
+        app:layout_constraintEnd_toEndOf="@+id/text_items_g36"
+        app:layout_constraintHorizontal_bias="0.417"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.485" />
+        app:layout_constraintVertical_bias="0.369" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
